k8s/netpolicy/allow-egress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-from-ingress-nginx
  namespace: skill-nest
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/component: controller
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    # Cho phép gọi nội bộ tới backend / frontend
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: skill-nest
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 8080
