k8s/netpolicy/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: skill-nest
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
